# FirecourtStudio

./: CMakeLists.txt  README.md  main.cpp
src/Engine/: Engine.hpp  resources.hpp
src/Engine/Zeta/Compiler/: Compiler.cpp  Compiler.hpp
src/Engine/Zeta/Config/: ZetaConfig.cpp  ZetaConfig.hpp
src/Engine/Zeta/Editor/: Tweaks.cpp  Tweaks.hpp
src/GUI/: GUI.cpp  GUI.hpp  resource.hpp
src/GUI/Components/Footer/: Footer.cpp  Footer.hpp
src/GUI/Components/Header/: Header.cpp  Header.hpp
src/GUI/Components/MainWindow/: MainWindow.cpp  MainWindow.hpp  Mainwindow.ui  mainwindow.cpp  mainwindow.hpp  ui_Mainwindow.h
src/GUI/Components/Playlist/: PlaylistWidget.cpp  PlaylistWidget.hpp
